# xcope

./: AGENTS.md  Cargo.toml  MEMORY.md  README.md  build.rs  toybox.toml
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md  PRODUCT_SPEC.md  PROJECT.md  README.md
docs/plans/: index.md
docs/plans/active/: runtime-resize-host-validation.md  todo.md
scripts/: ci.sh  ci_local.sh  policy-check.sh  run_agent_request.sh
src/: constants.rs  gui.rs  host_validation.rs  lib.rs  params.rs  state_io.rs  transport.rs  vst3.rs
src/gui/: layout.rs  mod.rs  reducer.rs
src/params/: mod.rs  normalized.rs  store.rs  types.rs
src/scope/: capture_buffer.rs  mock_renderer.rs  mod.rs  render_sampling.rs  windowing.rs
src/vst3/: audio_io.rs  bus.rs  controller.rs  factory.rs  mod.rs  param_meta.rs  processor.rs  shared_registry.rs  tests.rs  transport_context.rs
