[package]
name = "xcope"
version = "0.1.0"
edition = "2021"
authors = ["portalsurfer"]
publish = false
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[features]
default = []
# Opt-in everywhere: do not require the VST3 SDK for default builds.
vst3 = ["toybox/vst3"]
# Opt-in screenshot contract (used by the fleet harness + CI).
screenshot-test = ["toybox/screenshot-test"]

[dependencies]
toybox = { git = "https://github.com/PORTALSURFER/toybox.git", rev = "773c8ceb9991a94f7427d542f0b8fa6ab78d1697", features = ["gui"] }
