[package]
name = "xcope"
version = "0.1.0"
edition = "2021"
authors = ["portalsurfer"]
publish = false
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[features]
default = []
# Opt-in everywhere: do not require the VST3 SDK for default builds.
vst3 = ["toybox/vst3"]
# Opt-in screenshot contract (used by the fleet harness + CI).
screenshot-test = ["toybox/screenshot-test"]

[dependencies]
toybox = { git = "https://github.com/PORTALSURFER/toybox.git", rev = "8136fbdd01f201a85003fc9abfebc297746e21a3", features = ["gui"] }
